[package]
name = "bike"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.99"
uuid = "1.18.0"
libmpv2 = "5.0.1"
claxon = "0.4.3"
serde_json = "1.0.143"
symphonia = "0.5.4"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
log = "0.4.27"
ebur128 = "0.1.10"
