[package]
name = "bike"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.99"
uuid = "1.18.0"
symphonia = "0.5.4"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
log = "0.4.27"
spectrum-analyzer = "1.7.0"
clap = { version = "4.5.45", features = ["derive", "color"] }
crossterm = "0.29.0"
async-trait = "0.1.89"
