[package]
name = "music-rider"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.99"
symphonia = "0.5.4"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
log = "0.4.27"
spectrum-analyzer = "1.7.0"
clap = { version = "4.5.45", features = ["derive", "color"] }
crossterm = "0.29.0"
kondis = "0.2.0"

